--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-big-calendar": "^1.19.4",
+    "react-day-picker": "^9.13.2",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
     "react-hot-toast": "^2.6.0",
